Update Weekly to support multi-day events (buggy)
There are numerous bugs that need to be fixed:
  - Events only appear in the hour in which they start and end
  - Events that end on an hour e.g. 3:00 display as taking up the full
    proceeding hour
  - Event titles show up on every segment no matter how small
  - Events that overlap hide each other completely

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -95,6 +95,7 @@ main article {
 
 .weekly article {
 	height: 4rem;
+	position: relative;
 }
 
 .monthly article ul::-webkit-scrollbar { width: 0 !important; }
@@ -110,6 +111,7 @@ main article {
 	flex-flow: column;
 	overflow: scroll;
 	scrollbar-width: none;
+	width: 100%;
 }
 
 /*** Display Settings: Main Content Borders ***/
@@ -118,7 +120,7 @@ section article:first-child {
 	border-left: 2px solid lightgrey;
 }
 
-.weekly > section, .monthly > section:first-child {
+.monthly > section:first-child {
 	border-top: 1px solid lightgrey;
 }
 
